# Chip-8-Emulator

./: CMakeLists.txt  Readme.md  build_project.sh
src/: Chip8.cpp  Chip8.hpp  Platform.cpp  Platform.hpp  main.cpp  profiler.hpp
